v1.15.0: Added - Long Wick - Session
